--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Usuario"
-        app:layout_constraintBottom_toTopOf="@+id/edtUsuarioLogin"
+        app:layout_constraintBottom_toTopOf="@+id/edtEmailLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.16"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtUsuarioLogin"
+        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin"
         app:layout_constraintVertical_bias="0.766" />
 
     <EditText
@@ -73,11 +73,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtUsuarioLogin"
+        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin"
         app:layout_constraintVertical_bias="0.638" />
 
     <EditText
-        android:id="@+id/edtUsuarioLogin"
+        android:id="@+id/edtEmailLogin"
         android:layout_width="268dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -91,15 +91,6 @@
         app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/txtRegistrar"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="365dp">
-
-    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btnRegistrar_Login"
